Fix Cell Data JSON text readability with white text on grey background

--- a/src/app/styles/App.scss
+++ b/src/app/styles/App.scss
@@ -14,7 +14,8 @@ body {
   }
 
   pre {
-    background-color: black;
+    background-color: rgb(55, 62, 71);
+    color: white;
   }
 }
 
